Rebase to java8-server, add more memory